# AutoGraph

./: .gitignore  PROJECT.md  README.md  excel_handler.py  main.py  pyproject.toml  s2p_excel_handler.py  тест1
.codex-run/: s2p_check.xlsx  s2p_check_graph_fixed.xlsx  s2p_check_sheet1.xlsx  txt_check.xlsx  txt_check_fixed.xlsx  txt_check_fixed2.xlsx  txt_plain.xlsx
autograph_service/: __init__.py  __main__.py  excel_handler.py  gui.py  main.py  s2p_excel_handler.py  s2p_parser.py  service.py  txt_parser.py
example_s2p/: 0283 30mA 1 obr.s2p  0283 30mA 1 obr.xlsx  1 образец.xlsx
graph/: 0283 30mA 1 obr.xlsx  NiPA-62-F_UG_1__2026-03-24_11-45-12.txt  NiPA-62-F_UG_2__2026-03-24_11-59-12.txt  NiPA-62-F_UG_3__2026-03-24_13-09-19.txt  NiPA-62-F_UG_4__2026-03-24_13-15-09.txt  NiPA-62-F_UG_5__2026-03-24_13-21-24.txt  NiPA-62-F_UG_6__2026-03-24_13-29-23.txt  NiPA-62-F_UG_7__2026-03-24_13-34-39.txt  NiPA-64-F-MD_1.1_18dBm_IMP_iPA-64-F_2026-03-03_18-23-31.txt  NiPA-64-F-MD_1_18dBm_IMP_iPA-64-F_2026-03-03_17-42-42.txt  NiPA-64-F-MD_1_18dBm_NR_iPA-64-F_2026-03-03_17-35-26.txt  NiPA-64-F-MD_2_18dBm_IMP_iPA-64-F_2026-03-03_18-08-28.txt  NiPA-64-F-MD_2_18dBm_NR_iPA-64-F_2026-03-03_18-01-49.txt  R086W2-2 различные образц Н.Р._part1.xlsx  R086W2-2 различные образц Н.Р._part2.xlsx
test/: inspect_template.py  test_debug_copy.py  test_encoding.py
tests/: test_gui.py  test_service.py
tools/diagnostics/: test_metadata.py
